--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
+    "@google/genai": "^1.24.0",
     "@openai/agents": "^0.1.9",
     "lit-html": "^3.3.1",
     "openai": "^6.3.0",
