--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
   "name": "rock-talk",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "devDependencies": {
-    "prettier": "^3.6.2",
-    "typescript": "~5.9.3",
-    "vite": "^7.1.7"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chuanqisun/rock-talk.git"
   },
-  "dependencies": {
-    "@openai/agents": "^0.1.9",
-    "lit-html": "^3.3.1",
-    "openai": "^6.3.0",
-    "rxjs": "^7.8.2",
-    "zod": "^3.25.76"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/chuanqisun/rock-talk/issues"
+  },
+  "homepage": "https://github.com/chuanqisun/rock-talk#readme",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ]
 }
